Added APify and Truth Social scraper, added Discord commands for Apify, updated documentation, tested basic functionality

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,24 @@
 # Discord Bot Configuration
-# Get your token from: https://discord.com/developers/applications
+# Get your Discord bot token from https://discord.com/developers/applications
 DISCORD_TOKEN=your_discord_bot_token_here
-
-# Bot Settings
-# Command prefix for the bot (e.g., !t for !t ping)
 BOT_PREFIX=!t
-
-# Logging Configuration
-# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
-# Log file name (will be created in the project root)
 LOG_FILE=bot.log
+
+# Apify Configuration
+# Get your Apify API token from https://console.apify.com/account/integrations
+# Required for Truth Social integration
+APIFY_API_TOKEN=your_apify_api_token_here
+
+# The Apify actor ID for Truth Social scraping
+# Default: muhammetakkurtt/truth-social-scraper
+# Format: username/actor-name
+APIFY_ACTOR_ID=muhammetakkurtt/truth-social-scraper
+
+# Optional: Configure rate limiting for Apify API calls
+# Maximum number of requests per minute
+APIFY_RATE_LIMIT=60
+
+# Optional: Configure caching for API responses
+# Cache duration in seconds (0 to disable)
+APIFY_CACHE_DURATION=300
