--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-discord.py>=2.0.0
-python-dotenv>=0.19.0
-requests>=2.26.0
-aiohttp>=3.8.0
-python-dateutil>=2.8.2 
+discord.py==2.3.2
+python-dotenv==1.0.0
+requests==2.31.0
+aiohttp==3.9.1
+python-dateutil==2.8.2
+apify-client==1.6.1 
